--- a/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
+++ b/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
@@ -4,7 +4,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-md-4">
-                        <label dotranslate>Miscellaneous Monthly Attendance</label>
+                        <label dotranslate> Monthly Attendance Detail</label>
                     </div>
                     <div class="col-md-4 ">
                         <label dotranslate>Search Attendance Month And Year Wise </label>
