--- a/src/app/pages/self/attendance/roster/roster.html
+++ b/src/app/pages/self/attendance/roster/roster.html
@@ -3,15 +3,15 @@
         <div class="panel panel-medium">
             <div class="panel-heading">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label dotranslate>Monthly Roster Detail</label>
                     </div>
                     <div class="col-md-4 ">
-                        <label dotranslate>Search Roster Month And Year Wise</label>
+                        <label dotranslate>Search Roster by from date and to date</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="month" ng-options="monthL.Id as monthL.Name for monthL in monthlySummery.monthList"></select> -->
                                 <div class="input-group" moment-picker="fromDate" format="DD-MMM-YYYY" > 
                                     <span class="input-group-addon">
@@ -20,7 +20,7 @@
                                     <input class="form-control input-sm"  placeholder="Pick any date" ng-model="fromDate" ng-change="getPageData()" ng-model-options="{ updateOn: 'blur' }">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <div class="input-group" moment-picker="toDate" format="DD-MMM-YYYY">
                                     <span class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
@@ -28,6 +28,10 @@
                                     <input class="form-control input-sm" placeholder="Pick any date" ng-model="toDate" ng-change="getPageData()" ng-model-options="{ updateOn: 'blur' }">
                                 </div>
                                 <!-- <button type="submit" class="btn btn-success" ng-click="getPageData();" dotranslate>Apply Out-Duty</button> -->
+                                <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="years" ng-options="yearL.Id as yearL.Name for yearL in monthlySummery.yearList"></select> -->
+                            </div>
+                            <div class="col-md-2">
+                                <button type="submit" class="btn input-sm btn-success" ng-click="getPageData();" dotranslate>Search</button>
                                 <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="years" ng-options="yearL.Id as yearL.Name for yearL in monthlySummery.yearList"></select> -->
                             </div>
                         </div>
