--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -228,6 +228,12 @@ margin-top: 30px;
     color: #40a8f1;
     margin-top: 2px;
 }
-
-
+.text-moderate-bold {
+  font-weight: bold;
+}
+.modal .modal-dialog.modal-top-center-650
+{
+  width: 700px;
+  overflow: auto;
+}
   //end of ED css
