--- a/src/app/pages/employee/employee.html
+++ b/src/app/pages/employee/employee.html
@@ -3,7 +3,7 @@
         <div class="profile-picture-container">
             <div class="profile-picture" width="200px" height="200px">
             </div>
-            <div class="img-circle img-initials" random-Color>{{empBaicDetail.EmpFirstName.substr(0,1)}}{{empBaicDetail.EmpLastName.substr(0,1)}}</div>
+            <div class="img-circle img-initials" random-Color>{{empBaicDetail.EmpName.split(' ')[0].substr(0,1)}}{{empBaicDetail.EmpName.split(' ')[1].substr(0,1)}}</div>
         </div>
         <div class="row employee-header">
             <div class="col-sm-12 clear-right-padding">
@@ -13,13 +13,13 @@
                     </div>
                     <!-- ngIf: ctrl.model.locationName -->
                     <p class="current-city">
-                        <i class="fa fa-map-marker"></i> {{empBaicDetail.EmpLocation}}</p>
+                        <i class="fa fa-map-marker"></i> {{empBaicDetail.LocationName}}</p>
                     <p class="email ng-scope">
                         <i class="fa fa-envelope"></i>
-                        <a href="mailto:pardeep0592@gmail.com" class="ng-binding">{{empBaicDetail.EmpEmail}}</a>
+                        <a href="mailto:pardeep0592@gmail.com" class="ng-binding">{{empBaicDetail.PdEmail}}</a>
                     </p>
                     <p class="mobile">
-                        <i class="fa fa-phone"></i> {{empBaicDetail.EmpMobile}}</p>
+                        <i class="fa fa-phone"></i> {{empBaicDetail.PdMobileNo}}</p>
                     </p>
                 </div>
                 <div class="col-sm-12 clear-left-padding">
