--- a/src/app/pages/employee/empsummary/empsummary.html
+++ b/src/app/pages/employee/empsummary/empsummary.html
@@ -6,7 +6,9 @@
                     <div class="panel-heading">
                         Professional Summary
                     </div>
-                    <div class="panel-body"></div>
+                    <div class="panel-body">
+                        <p>{{empProfessional[0].PSDescription}}</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-12 clear-left-padding">
@@ -14,7 +16,16 @@
                     <div class="panel-heading">
                         Experience
                     </div>
-                    <div class="panel-body"></div>
+                    <div class="panel-body">
+                        <div ng-repeat-start="exp in empExperience">
+                            <p class="text-moderate-bold">{{exp.WEOrganizName}}</p>
+                            <span class=""></span>
+                            <br>
+                            <span class="">{{exp.WEFrom | date:'MMM y'}} - {{exp.WETo | date:'MMM y'}} | {{exp.WECompanyAddress}}</span>
+
+                        </div>
+                        <hr ng-repeat-end/>
+                    </div>
                 </div>
             </div>
             <div class="col-md-12 clear-left-padding">
@@ -22,7 +33,16 @@
                     <div class="panel-heading">
                         Education
                     </div>
-                    <div class="panel-body"></div>
+                    <div class="panel-body">
+                        <div ng-repeat-start="edu in empEducation">
+                            <p class="text-moderate-bold">{{edu.QualDegree}}, {{edu.QualMajorSpecialization}}</p>
+                            <span class="">{{edu.QualInstititeName}}</span>
+                            <br>
+                            <span class="">{{edu.QualStartDate | date:'MMM y'}} - {{edu.QualEndDate | date:'MMM y'}}</span>
+                        </div>
+                        <hr ng-repeat-end/>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -34,44 +54,29 @@
                 <div class="panel-heading">
                     Team
                 </div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="vertical-top-margin">
+                        <div class="col-sm-12">
+                            <div ng-repeat="team in empTeam" ng-if="!$first" class="icon-list col-lg-6 clear-left-padding vertical-margin signatory">
+
+                                <div class="icon-container ">
+                                    <div class="icon">
+                                        <div class="initials-icon icon-circle" random-Color>{{team.EmpName.split(' ')[0].substr(0,1)}}{{team.EmpName.split(' ')[1].substr(0,1)}}</div>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <h4 class="title clear-bottom">{{team.EmpName}}</h4>
+                                    <span class="title-description clear-top">{{team.DesgName}}</span>
+                                    <br>
+                                    <span class="title-description clear-top">{{team.PdMobileNo}}</span>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-    <!-- <div class="col-lg-6">
-        <div class="panel">
-            <div class="panel-heading">
-                Professional Summary
-            </div>
-            <div class="panel-body"></div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="panel">
-            <div class="panel-heading">
-                Team
-            </div>
-            <div class="panel-body"></div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="panel">
-            <div class="panel-heading">
-                Experience
-            </div>
-            <div class="panel-body"></div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="panel">
-            <div class="panel-heading">
-                Education
-            </div>
-            <div class="panel-body"></div>
-        </div>
-    </div> -->
+</div>
