--- a/src/app/pages/employee/empprofile/empprofile.html
+++ b/src/app/pages/employee/empprofile/empprofile.html
@@ -64,30 +64,36 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label>Work Email</label>
-                            <p>{{empBaicDetail.JDOfficeEmail}}</p>
+                            <p>{{empContact.JDOfficeEmail}}</p>
                         </div>
                         <div class="col-md-6">
-                            <label>Personal Email </label>
-                            <p>{{empBaicDetail.PdEmail}}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label>Mobile Phone</label>
-                            <p>{{empBaicDetail.JDOfficeMobile}}</p>
-                        </div>
-                        <div class="col-md-6">
-                            <label>Work Phone</label>
-                            <p>{{empBaicDetail.JDOfficePhone}}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <label>Residence Phone</label>
-                            <p>{{empBaicDetail.JDResidenceMobile}}</p>
+                            <label>Work Mobile</label>
+                            <p>{{empContact.JDOfficeMobile}}</p>
                         </div>
 
                     </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label>Personal Email </label>
+                            <p>{{empContact.PdEmail}}</p>
+                        </div>
+                        <div class="col-md-6">
+                            <label>Personal Mobile </label>
+                            <p>{{empContact.PdMobileNo}}</p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label>Work Phone</label>
+                            <p>{{empContact.JDOfficePhone}}</p>
+                        </div>
+                        <div class="col-md-6">
+                            <label>Residence Phone</label>
+                            <p>{{empContact.PdResidenceMobile}}</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
