--- a/src/app/pages/self/attendance/roster/roster.html
+++ b/src/app/pages/self/attendance/roster/roster.html
@@ -6,24 +6,23 @@
                     <div class="col-md-3">
                         <label dotranslate>Monthly Roster Detail</label>
                     </div>
-                    <div class="col-md-4 ">
-                        <label dotranslate>Search Roster by from date and to date</label>
+                    <div class="col-md-6 ">
+                        <label dotranslate>Search Roster by month</label>
                     </div>
-                    <div class="col-md-5">
-                        <div class="row">
-                            <div class="col-md-5">
+                    <div class="col-md-3">
+                        <div class="row pull-right">
+                            <div class="col-md-7">
                                 <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="month" ng-options="monthL.Id as monthL.Name for monthL in monthlySummery.monthList"></select> -->
-                                <div class="input-group" moment-picker="fromDate" format="MMM-YYYY" > 
+                                <div class="input-group" moment-picker="fromDate" format="MMM-YYYY">
                                     <span class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </span>
-                                    <input class="form-control input-sm"  placeholder="Pick any date" ng-model="fromDate" ng-change="getPageData()" ng-model-options="{ updateOn: 'blur' }">
+                                    <input class="form-control input-sm" placeholder="Pick any date" ng-model="fromDate" ng-model-options="{ updateOn: 'blur' }">
                                 </div>
                             </div>
-                           
-                            <div class="col-md-2">
+
+                            <div class="col-md-5">
                                 <button type="submit" class="btn input-sm btn-success" ng-click="getPageData();" dotranslate>Search</button>
-                                <!-- <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="years" ng-options="yearL.Id as yearL.Name for yearL in monthlySummery.yearList"></select> -->
                             </div>
                         </div>
                     </div>
