--- a/src/app/pages/employee/empprofile/primary/primary.html
+++ b/src/app/pages/employee/empprofile/primary/primary.html
@@ -9,19 +9,20 @@
                 <div class="col-sm-12 vertical-margin">
                     <fieldset>
                         <div class="col-sm-12 new-person-details">
+                           
                             <div class="col-sm-6 clear-left-padding">
                                 <div class="form-group">
                                     <label>First Name
                                         <span class="font-red">*</span>
                                     </label>
                                     <input type="text" class="form-control" data-ng-model="entity.EmpFirstName" name="FirstName" id="FirstName" required/>
-
                                 </div>
                             </div>
-                            <div class="col-sm-6 clear-side-padding">
+                            <div class="col-sm-6 clear-left-padding">
                                 <div class="form-group">
                                     <label>Middle Name</label>
                                     <input type="text" class="form-control" data-ng-model="entity.EmpMiddleName" name="MiddleName" id="MiddleName" required />
+
                                 </div>
                             </div>
                             <div class="col-sm-6 clear-left-padding">
@@ -45,6 +46,7 @@
                                     <label>DOB
                                         <span class="font-red">*</span>
                                     </label>
+
                                     <div class="input-group" moment-picker="entity.PdDateOfBirth" format="DD-MMM-YYYY" start-view="month" max-date="col.maxDate"
                                         min-date="col.minDate">
                                         <span class="input-group-addon">
@@ -58,19 +60,6 @@
                                             </button>
                                         </span>
                                     </div>
-                                    <!-- <div class="input-group" moment-picker="entity.PdDateOfBirth | date:'dd-MMM-y'" format="DD-MMM-YYYY" start-view="month" max-date="col.maxDate"
-                                        min-date="col.minDate">
-                                        <span class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </span>
-                                        <input ng-readonly="true" class="form-control" placeholder="Select a date" ng-model="entity.PdDateOfBirth | date:'dd-MMM-y'">
-                                        <span class="input-group-btn">
-                                            <button class="btn btn-secondary" ng-click="entity.PdDateOfBirth=''" type="button">
-                                                <i class="fa fa-close"></i>
-                                            </button>
-                                        </span>
-                                    </div> -->
-                                    <!-- <input type="text" class="form-control" data-ng-model="entity.PdDateOfBirth | date:'dd-MMM-y'" name="LastName" id="LastName" required /> -->
 
                                 </div>
                             </div>
