--- a/src/app/pages/employee/empprofile/empprofile.html
+++ b/src/app/pages/employee/empprofile/empprofile.html
@@ -170,7 +170,7 @@
                         <p class="text-moderate-bold">{{exp.WEOrganizName}}</p>
                         <span class="">{{exp.WEFrom | date:'MMM y'}} - {{exp.WETo | date:'MMM y'}} | {{exp.WECompanyAddress}}</span>
                         <br>
-                        <span>Description</span>
+                        <span>{{exp.WERemark}}</span>
 
                     </div>
                     <hr ng-repeat-end/>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="panel-body">
                     <div ng-repeat-start="edu in empEducation">
-                        <p class="text-moderate-bold">{{edu.QualDegree}}, {{edu.QualMajorSpecialization}}</p>
+                        <p class="text-moderate-bold">{{edu.QualificationName}}, {{edu.QualMajorSpecialization}}</p>
                         <span class="">{{edu.QualInstititeName}}</span>
                         <br>
                         <span class="">{{edu.QualStartDate | date:'MMM y'}} - {{edu.QualEndDate | date:'MMM y'}}</span>
