--- a/src/app/pages/employee/empprofile/experience/experience.html
+++ b/src/app/pages/employee/empprofile/experience/experience.html
@@ -25,8 +25,7 @@
             <div class="row">
                 <div class="col-sm-12 vertical-margin">
                     <div class="col-sm-6 pull-right text-right">
-                        <button type="submit" class="btn btn-submit btn-primary" data-ng-click="">Update</button>
-                        <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
+                        <button type="button" class="btn btn-submit btn-primary" data-ng-click="close()">Close</button>
                     </div>
                 </div>
             </div>
