--- a/src/app/pages/employee/empsummary/empsummary.html
+++ b/src/app/pages/employee/empsummary/empsummary.html
@@ -19,10 +19,9 @@
                     <div class="panel-body">
                         <div ng-repeat-start="exp in empExperience">
                             <p class="text-moderate-bold">{{exp.WEOrganizName}}</p>
-                            <span class=""></span>
-                            <br>
                             <span class="">{{exp.WEFrom | date:'MMM y'}} - {{exp.WETo | date:'MMM y'}} | {{exp.WECompanyAddress}}</span>
-
+                            <br>
+                            <span>{{exp.WERemark}}</span>
                         </div>
                         <hr ng-repeat-end/>
                     </div>
@@ -35,7 +34,7 @@
                     </div>
                     <div class="panel-body">
                         <div ng-repeat-start="edu in empEducation">
-                            <p class="text-moderate-bold">{{edu.QualDegree}}, {{edu.QualMajorSpecialization}}</p>
+                            <p class="text-moderate-bold">{{edu.QualificationName}}, {{edu.QualMajorSpecialization}}</p>
                             <span class="">{{edu.QualInstititeName}}</span>
                             <br>
                             <span class="">{{edu.QualStartDate | date:'MMM y'}} - {{edu.QualEndDate | date:'MMM y'}}</span>
