--- a/src/app/pages/employee/empprofile/relation/relation.html
+++ b/src/app/pages/employee/empprofile/relation/relation.html
@@ -1,107 +1,173 @@
 <div class="modal-content">
-        <div class="modal-header bg-primary">
-            <h3 class="inline-block clear-vertical-margin">Primary Details</h3>
-        </div>
-    
-        <div class="modal-body content-container">
-            <div class="row add-signatory-container">
-                <form name="addPrimaryDetailForm" id="addPrimaryDetailForm" data-ng-init="ctrl.form = this;" novalidate>
-                    <div class="col-sm-12 vertical-margin">
-                        <fieldset>
-                            <div class="col-sm-12 new-person-details">
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>First Name <span class="font-red">*</span></label>
-                                        <input type="text" class="form-control" data-ng-model="" name="FirstName" id="FirstName" required
-                                        />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.FirstName" data-required-error="First Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-side-padding">
-                                    <div class="form-group">
-                                        <label>Middle Name</label>
-                                        <input type="text" class="form-control" data-ng-model="" name="MiddleName" id="MiddleName"
-                                            required />
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Last Name <span class="font-red">*</span></label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Display Name</label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Gender <span class="font-red">*</span></label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>DOB <span class="font-red">*</span></label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Martial Status </label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Blood Group</label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Hobbies</label>
-                                        <input type="text" class="form-control" data-ng-model="" name="LastName" id="LastName"
-                                            required />
-                                        <span class="validation-msg" data-validation-messages="" data-model-controller="addPrimaryDetailForm.LastName" data-required-error="Last Name is required"
-                                            data-form-submit="addPrimaryDetailForm.$submitted"></span>
-                                    </div>
-                                </div>
-    
-                             
-                            </div>
-                        </fieldset>
+    <div class="modal-header bg-primary">
+        <h3 class="inline-block clear-vertical-margin">Relation Detail</h3>
+    </div>
+
+    <div class="modal-body content-container">
+
+        <div ng-show="grid" class="col-sm-12">
+            <div class="col-md-6">
+                <div class="row">
+                    <button class="btn btn-default" ng-click="grid=false;addForm=true;editForm=false ">
+                        <i class="fa fa-plus"></i>
+                        <span dotranslate>create</span>
+                    </button>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="col-md-12">
+                <div class="row">
+                    <div ui-grid="gridOptions" class="">
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12 vertical-margin">
-                            <div class="col-sm-6 pull-right text-right">
-                                <button type="submit"  class="btn btn-submit btn-primary" data-ng-click="">Update</button>                        
-                                <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 vertical-margin">
+                    <div class="col-sm-6 pull-right text-right">
+                        <button type="button" class="btn btn-submit btn-primary" data-ng-click="close()">Close</button>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
+        <div class="row add-signatory-container">
+            <form name="addform" ng-show="addForm">
+
+                <div class="col-sm-12 vertical-margin">
+                    <fieldset>
+                        <div class="col-sm-12 new-person-details">
+                            <div class="col-sm-12 clear-left-padding">
+                                <div class="form-group">
+                                    <h3>Add Relation Detail</h3>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Relation
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <select class="form-control" data-ng-model="entity.FdRelationshipId" ng-options="relation.value as relation.name for relation in dropDownLists[0]"></select>
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Name
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="entity.FdName" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label> Email
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="entity.FdEmail" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label> Mobile
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="entity.FdMobile" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Gender
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <select class="form-control" data-ng-model="entity.FdGenderId" ng-options="gender.value as gender.name for gender in dropDownLists[1]"></select>
+
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 vertical-margin">
+                                <div class="col-sm-6 pull-right text-right">
+                                    <button type="submit" class="btn btn-submit btn-primary" data-ng-click="add(entity,addform)">Save</button>
+                                    <a class="btn btn-cancel" data-ng-click="grid=true;addForm=false;editForm=false; ">Cancel</a>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+
+            </form>
+            <form ng-show="editForm" name="editform">
+                <div class="col-sm-12 vertical-margin">
+                    <fieldset>
+                        <div class="col-sm-12 new-person-details">
+                            <div class="col-sm-12 clear-left-padding">
+                                <div class="form-group">
+                                    <h3>Edit Relation Detail</h3>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Relation
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <select class="form-control" data-ng-model="editentity.FdRelationshipId" ng-options="relation.value as relation.name for relation in dropDownLists[0]"></select>
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Name
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="editentity.FdName" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label> Email
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="editentity.FdEmail" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label> Mobile
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" data-ng-model="editentity.FdMobile" required />
+
+                                </div>
+                            </div>
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Gender
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <select class="form-control" data-ng-model="editentity.FdGenderId" ng-options="gender.value as gender.name for gender in dropDownLists[1]"></select>
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 vertical-margin">
+                                <div class="col-sm-6 pull-right text-right">
+                                    <button type="submit" class="btn btn-submit btn-primary" data-ng-click="update(editentity,editform)">Update</button>
+                                    <a class="btn btn-cancel" data-ng-click="grid=true;addForm=false;editForm=false; ">Cancel</a>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
