--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -4,7 +4,7 @@
                 <div class="pnl200 panel">
                     <div class="panel-body">
                         <div class="icon-size col-sm-12 ">
-                            <a class="col-sm-4 text-center anchor-sm" data-ui-sref=".addemployee" href="#/employees/reports/addemployee">
+                            <a class="col-sm-4 text-center anchor-sm" data-ui-sref="organization.employees.add" >
                                 <div>
                                     <span>
                                         <i class="fa fa-user-plus"></i>
@@ -14,7 +14,7 @@
                                     <span class="text-head">New Employee</span>
                                 </div>
                             </a>
-                            <a class="col-sm-4 text-center tile-icon clear-side-padding anchor-sm" data-ui-sref="employees.employeedirectory" href="#/employees/employeedirectory">
+                            <a class="col-sm-4 text-center tile-icon clear-side-padding anchor-sm" data-ui-sref="directory.employeedirectory" >
                                 <div>
                                     <span>
                                         <i class="fa fa-user-plus"></i>
@@ -70,7 +70,7 @@
     
                         <div class="col-sm-12 link-item clear-side-padding">
                             <div class="col-sm-6">
-                                <a class="anchor-sm" data-ui-sref=".addemployee" href="#/employees/reports/addemployee">
+                                <a class="anchor-sm" data-ui-sref="organization.employees.add" >
                                     <span>
                                         <i class="fa fa-user-plus"></i>
                                     </span>
@@ -79,7 +79,7 @@
                             </div>
                             <!-- xhrFeatureAuthorize: -->
                             <div class="col-sm-6 ng-scope" data-xhr-feature-authorize="" data-feature="ENGAGE">
-                                <a class="anchor-sm" data-ui-sref="^.engage.newpoll" href="#/employees/engage/reachout/dashboard/newpoll">
+                                <a class="anchor-sm" data-ui-sref="^.engage.newpoll" >
                                     <span>
                                         <i class="fa fa-user-plus"></i>
                                     </span>
