--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -192,6 +192,7 @@
           </select>
         </div>
       </div>
+      <input type="text">
 
     </div>
     <!-- <div class="row">
@@ -206,7 +207,7 @@
         </div>
       </div>
     </div> -->
-    <div class="text-center">
+    <div class="text-center pull-right">
       <button type="submit" class="btn btn-primary">Save</button>
       <button type="button" ng-click="addCtrl.empAdd=[]" class="btn btn-primary">Clear</button>
       <button type="button" ng-click="back('organization.employees.list')" class="btn btn-primary">Back</button>
