--- a/src/app/pages/employee/empprofile/professional/professional.html
+++ b/src/app/pages/employee/empprofile/professional/professional.html
@@ -1,38 +1,41 @@
 <div class="modal-content">
-        <div class="modal-header bg-primary">
-            <h3 class="inline-block clear-vertical-margin">Contact Details</h3>
-        </div>
-    
-        <div class="modal-body content-container">
-            <div class="row add-signatory-container">
-                <form name="addContactForm" id="addContactForm" data-ng-init="ctrl.form = this;" novalidate>
-                    <div class="col-sm-12 vertical-margin">
-                        <fieldset>
-                            <div class="col-sm-12 new-person-details">
-                                <div class="col-sm-6 clear-left-padding">
-                                    <div class="form-group">
-                                        <label>Professional Summary  </span><span class="font-red">*</span></label>
-                                        <!-- <input type="text" class="form-control" data-ng-model="" name="FirstName" id="FirstName" required
-                                        /> -->
-                                     
-                                        <textarea class="form-control" data-ng-model="entity.PSDescription"></textarea>
+    <div class="modal-header bg-primary">
+        <h3 class="inline-block clear-vertical-margin">Contact Details</h3>
+    </div>
 
-                                    </div>
+    <div class="modal-body content-container">
+        <div class="row add-signatory-container">
+            <form name="form" id="form" data-ng-init="ctrl.form = this;" novalidate>
+                <div class="col-sm-12 vertical-margin">
+                    <fieldset>
+                        <div class="col-sm-12 new-person-details">
+                            <div class="col-sm-6 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Professional Summary </span>
+                                        <span class="font-red">*</span>
+                                    </label>
+                                    <!-- <input type="text" class="form-control" data-ng-model="" name="FirstName" id="FirstName" required
+                                        /> -->
+
+                                    <textarea class="form-control" data-ng-model="entity.PSDescription"></textarea>
+
                                 </div>
-                              
-                             
                             </div>
-                        </fieldset>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 vertical-margin">
-                            <div class="col-sm-6 pull-right text-right">
-                                <button type="submit"  class="btn btn-submit btn-primary" data-ng-click="update()">Update</button>                        
-                                <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
-                            </div>
+
+
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 vertical-margin">
+                        <div class="col-sm-6 pull-right text-right">
+                            <button ng-if="param!=undefined" type="submit" class="btn btn-submit btn-primary" data-ng-click="update()">Update</button>
+                            <button ng-if="param==undefined" type="submit" class="btn btn-submit btn-primary" data-ng-click="save(form)">Save</button>
+                            <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
                         </div>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
