--- a/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
+++ b/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
@@ -157,7 +157,8 @@
             <div class="panel-body panel-medium">
                 <div class="row">
                     <div class="col-md-10">
-                        <grid-view ng-model="page" show-grid="true" allow-gallary="false" title-column="DayStatus" tag-column="DayStatus" desc-column="DayStatus"></grid-view>
+                        <!-- <grid-view ng-model="page" show-grid="true" allow-gallary="true" title-column="LocationName" tag-column="CityName" desc-column="StateName"></grid-view> -->
+                        <grid-view ng-model="page" show-grid="true" allow-gallary="true" title-column="DayStatus" tag-column="InTime" desc-column="OutTime"></grid-view>
                     </div>
                     <div class="col-md-2">
                         <div class="row" ng-show="apply">
