--- a/src/app/pages/self/attendance/roster/roster.html
+++ b/src/app/pages/self/attendance/roster/roster.html
@@ -32,7 +32,7 @@
 
             <div class="panel-body panel-medium">
                 <!-- <grid-view ng-model="page"></grid-view> -->
-                <grid-view ng-model="page" show-grid="true" allow-gallary="false" title-column="LocationName" tag-column="CityName" desc-column="StateName"></grid-view>
+                <grid-view ng-model="page" show-grid="true" allow-gallary="true" title-column="LocationName" tag-column="CityName" desc-column="StateName"></grid-view>
             </div>
         </div>
     </div>
