--- a/src/app/pages/self/attendance/miscellaneous/applyattendance.html
+++ b/src/app/pages/self/attendance/miscellaneous/applyattendance.html
@@ -9,8 +9,8 @@
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
                             <label dotranslate>Attendace Date</label>
-                            <input type="datetime" class="form-control" ng-model="entity.attendanceDate" name="AttendanceDate" id="AttendanceDate" required
-                            />
+                            <input type="datetime" ng-disabled="true" class="form-control" ng-model="entity.attendanceDate" name="AttendanceDate" id="AttendanceDate"
+                                required />
                         </div>
                     </div>
 
