--- a/src/app/pages/self/attendance/miscellaneous/applycoff.html
+++ b/src/app/pages/self/attendance/miscellaneous/applycoff.html
@@ -9,7 +9,7 @@
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
                             <label dotranslate>Date</label>
-                            <input type="datetime" class="form-control" ng-model="entity.COAttnDate" name="AttendanceDate" id="AttendanceDate" required
+                            <input type="datetime" class="form-control" ng-disabled="true" ng-model="entity.COAttnDate" name="AttendanceDate" id="AttendanceDate" required
                             />
                         </div>
                     </div>
