--- a/src/app/pages/self/attendance/miscellaneous/applyleave.html
+++ b/src/app/pages/self/attendance/miscellaneous/applyleave.html
@@ -9,7 +9,7 @@
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
                             <label dotranslate>Leave Date</label>
-                            <input type="text" class="form-control" ng-model="entity.leaveFromDate" name="LocationName" id="LocationName" required />
+                            <input type="text" class="form-control" ng-disabled="true" ng-model="entity.leaveFromDate" name="LocationName" id="LocationName" required />
                         </div>
                     </div>
                     <div class="col-sm-12 clear-left-padding">
