--- a/src/app/pages/self/apply/coff/coff.html
+++ b/src/app/pages/self/apply/coff/coff.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="form-group col-md-4 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.EmpId.text}}</label>
-                    <field-box page="page" ng-column="page.pageinfo.fields.EmpId " ng-entity="entity " form="editForm "></field-box>
+                    <field-box page="page" ng-column="page.pageinfo.fields.EmpId " ng-entity="entity " fb-change="attDateChange()" form="editForm "></field-box>
                 </div>
                 <div class="form-group col-md-4 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.COAppDate.text}}</label>
